kubernetes/apps/docker-mailserver/mta-sts/base/nginx-mta-sts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: nginx-mta-sts
    app.kubernetes.io/name: nginx-mta-sts
  name: nginx-mta-sts
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/instance: nginx-mta-sts
      app.kubernetes.io/name: nginx-mta-sts
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: nginx-mta-sts
        app.kubernetes.io/name: nginx-mta-sts
    spec:
      containers:
      - name: nginx-mta-sts
        image: nginx:alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
          - mountPath: /usr/share/nginx/html/.well-known
            name: mta-sts-file
      readinessProbe:
        failureThreshold: 3
        httpGet:
          path: /.well-known/mta-sts.txt
          port: http
          scheme: HTTP
        initialDelaySeconds: 20
        periodSeconds: 5
        successThreshold: 1
        timeoutSeconds: 10
      livenessProbe:
        failureThreshold: 3
        httpGet:
          path: /.well-known/mta-sts.txt
          port: http
          scheme: HTTP
        initialDelaySeconds: 180
        periodSeconds: 30
        successThreshold: 1
        timeoutSeconds: 10
      resources:
        requests:
          cpu: 1m
          memory: 128Mi
      volumes:
        - name: mta-sts-file
          configMap:
            name: mta-sts-file
